adding authMiddleware - job model and other authMiddleware check for JWT and add user id to the request object Job model with the userId of creator login controller now check the password and return JWT if correct

--- a/package.json
+++ b/package.json
@@ -25,7 +25,5 @@
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.9"
-  }
+  "devDependencies": {}
 }
